--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biglietto Del Treno </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
+    <div class="ticket">
+		<h1>Biglietto del Treno</h1>
+		<p><strong>Nome:</strong> <span id="userName"></span></p>
+		<p><strong>Km da percorrere:</strong> <span id="rangeKm"></span></p>
+        <p><strong>Età:</strong> <span id="userAge"></span></p>
+		<p><strong>Prezzo del biglietto:</strong> <span id="ticketPrice"></span></p>
+		<p><strong>Sconto:</strong> <span id="discount"></span></p>
+		<p><strong>Prezzo finale:</strong> <span id="totalPrice"></span></p>
+	</div>
 
     <script src="js/script.js"></script>
 </body>
